# zmrEditor

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.h.in  main.cpp
src/: config.h  main.cpp
